# ANS_signature_scoring

./: pyproject.toml  requirements.txt
signaturescoring/scoring_methods/: corrected_scanpy_scoring.py
