[tool.poetry]
name = "signaturescoring"
version = "0.1.0"
description = "The repository contains implementations of multiple gene expression signature scoring methods, including the novel gene signature scoring method, Adjusted Neighborhood Scoring (ANS)."
authors = ["lciernik <lciernik@ethz.ch>"]
readme = "README.md"
packages = [{include = "signaturescoring"}]

[tool.poetry.dependencies]
python = "^3.11.11"
numpy = "^2.1.3"
pandas = "^2.2.3"
scanpy = "^1.11.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
